# PersonalKnowledgeMCP

./: .dockerignore  .env.example  .env.test.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVPLAN.md  DEV_PLAN.md  DEV_PLAN_ISSUE_13.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  IMPLEMENTATION-SUMMARY.md  ISSUE_12_DEV_PLAN.md  LICENSE  Manual-Embedding-Testing.md  PersonalKnowledgeMCP.sln  README.md  SECURITY.md  bunfig.toml  docker-compose.test.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  test-embedding-manual.ts  tmpclaude-cf08-cwd  tsconfig.json
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  infrastructure.yml
.github/workflows/: ci.yml  helm-test.yaml  update-index.yml
charts/personal-knowledge-mcp/: .helmignore  Chart.yaml  NOTES.txt  README.md  values.schema.json  values.yaml
config/: default.json
docs/: High-level-Personal-Knowledge-MCP-PRD.md  MCP_INTEGRATION_GUIDE.md  Phase1-Core-MCP-Vector-Search-PRD.md  claude-code-setup.md  cli-commands-reference.md  client-configuration.md  configuration-reference.md  docker-operations.md  embedding-providers.md  feature-summary.md  graph-database-migration.md  graph-database-setup.md  graph-tools.md  kubernetes-deployment.md  licensing.md  logging-reference.md  mcp-tools-reference.md  neo4j-setup.md  performance-tuning-guide.md  phase1-feature-summary.md  testing.md  troubleshooting.md  user-mapping-configuration.md
docs/architecture/: DB-Migration-Design.md  DB-Migration-Implementation-Notes.md  Local-Folder-As-Repository-Implementation-Plan.md  Phase1-System-Design-Document.md  README.md  database-schema.md  incremental-document-support.md  incremental-updates-plan.md
docs/dev-plans/: issue-11-file-chunker-implementation.md
docs/integration/: agent-triggered-updates.md  cicd-index-updates.md
docs/pm/: DB-Migration-Feature-PRD.md  DB-Migration-Roadmap.md  Docker-Containerization-PRD.md  Local-Folder-As-Repository-PRD.md  Phase6-Document-Ingestion-PRD.md  Phase6-GitHub-Issues.md  Phase6-Project-Plan.md  Phase6-Roadmap.md  docker-containerization-issues.md  docker-containerization-roadmap.md  github-issues-creation.md  incremental-updates-issues.md  incremental-updates-roadmap.md  issue-8-dev-plan.md  knowledge-graph-PRD.md  knowledge-graph-embeddings-roadmap.md  phase1-implementation-roadmap.md  phase1-review-summary.md  phase4.0-falkordb-migration-issues.md  public-release-readiness-report.md
docs/security/: microsoft365-integration.md  oidc-deployment.md
docs/testing/: e2e-test-results-2025-12-12.md  e2e-validation.md  graph-feature-test-results.md
docs/troubleshooting/: partial-failure-guide.md
init-scripts/: 001-phase2-schema-placeholder.sql  002-phase6-watched-folders.sql  003-phase6-documents-down.sql  003-phase6-documents.sql
kubernetes/base/: kustomization.yaml  namespace.yaml
kubernetes/docs/: deployment-guide.md  local-testing.md  secret-management.md
scripts/: backup-chromadb.ps1  backup-chromadb.sh  backup-neo4j.ps1  backup-neo4j.sh  create-incremental-updates-issues.ps1  create-knowledge-graph-issues.sh  restore-chromadb.ps1  restore-chromadb.sh  restore-neo4j.ps1  restore-neo4j.sh  test-backup-restore-neo4j.sh  test-backup-restore.sh
src/: __init__.py  cli.ts  index.ts
src/auth/: errors.ts  index.ts  middleware-types.ts  middleware.ts  token-service.ts  token-store.ts  types.ts  validation.ts
src/cli/: index.ts
src/config/: index.ts  instance-config.ts
tests/: conftest.py  example.test.ts
(+667 files in other folders)
